--- a/heatingmasterstore/templates/partials/brand.html
+++ b/heatingmasterstore/templates/partials/brand.html
@@ -1,2 +1,2 @@
 {% load staticfiles %}
-<a href="{% url promotions:home %}"><img src="{% static "oscar/img/logo_store.gif" %}" class="logo" alt="{{ shop_name }} - {{ shop_tagline }}"  width="140" height="108" /></a>
+<a href="{% url promotions:home %}"><img src="{% static "oscar/img//svg/logo_store.gif" %}" class="logo" alt="{{ shop_name }} - {{ shop_tagline }}"  width="210" height="162" /></a>
