--- a/heatingmasterstore/templates/checkout/layout.html
+++ b/heatingmasterstore/templates/checkout/layout.html
@@ -23,7 +23,7 @@
                     {% include "partials/brand.html" %}
                 </div>
                 <div>
-                    <p><a href="https://www.verisign.com.au" target="_blank" title="https://www.verisign.com.au"><i class="verisign"></i></a></p>
+                    <p><a href="https://www.verisign.co.uk/" target="_blank" title="https://www.verisign.co.uk/"><i class="verisign"></i></a></p>
                     <p>{% trans "We accept" %} <br/> <i class="credit-cards"></i></p>
                 </div>
              </div>
