--- a/heatingmasterstore/templates/partials/footer.html
+++ b/heatingmasterstore/templates/partials/footer.html
@@ -16,8 +16,8 @@
             <li>
                 <h3>{% trans "Contact us" %}</h3>
                 <p>
-                    {% trans "42 Southfield Road," %} <br/> {% trans "Nottingham, NG8 3PL" %} <br/> 
-                    <strong><i class="icon-mobile"></i>{% trans "0800-424-1324" %}</strong>
+                    {% trans "sales@heatingmaster.co.uk" %} <br/>
+{#                    <strong><i class="icon-mobile"></i>{% trans "0800-424-1324" %}</strong>#}
                 </p>
                 <p class="social-icons">
                     <a href="#"><i class="icon-facebook"></i></a>
@@ -29,9 +29,9 @@
     </div>
     <div class="footer-disclaimer">
         <div class="container-fluid">
-            <a href="#" class="pull-right">{% trans "Site by Tangent Snowball Australia" %}</a>
+            <a href="http://tangentlabs.github.io/django-oscar/" class="pull-right">{% trans "Site by Django-Oscar" %}</a>
             <p>
-                <a href="https://www.verisign.com.au" title="https://www.verisign.com.au" target="_blank"><i class="verisign"></i></a>
+                <a href="https://www.verisign.co.uk/" title="https://www.verisign.co.uk/" target="_blank"><i class="verisign"></i></a>
                 <i class="credit-cards"></i>
             </p>
         </div>
