--- a/heatingmasterstore/templates/catalogue/detail.html
+++ b/heatingmasterstore/templates/catalogue/detail.html
@@ -27,86 +27,7 @@
         {% block product_gallery %}
         <div class="span6">
             {% include "catalogue/partials/gallery.html" %}
-        </div>
-        {% endblock %}
-
-        <div class="span6">
-            {% block product_main %}
-                <div class="product-highlight">
-                    <h4>{{ product.stockrecord.partner.name }}</h4>
-                    <h1>{{ product.get_title }}</h1>
-                    
-                    {% block product_stock_record %}
-                        {% if not product.is_group %}
-                        <div class="row-fluid">
-                            <h2 class="price_color">{% include "catalogue/partials/stock_record.html" %}</h2>
-                            <p class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free shipping" %}</strong> <br/> {% trans "For all orders" %}</span></p>
-                        </div>
-                        {% endif %}
-                    {% endblock %}
-
-                    {% block product_description %}
-                        {% if product.description %}
-                        <p>{{ product.description|safe }}</p>
-                        {% endif %}
-                    {% endblock %}
-                    
-                    {% if not product.is_group %}
-                        {% block product_basket_form %}
-                        <div class="well">
-                            {% include "catalogue/partials/add_to_basket_form.html" %}
-                        </div>
-                        {% endblock %}
-                    {% endif %}
-
-                {% endblock %}
-            </div>
-
-            {% if product.is_group %}
-                <h3>{% trans "Please select your varieties" %}</h3>
-                
-                {% with variants=product.variants.all %}
-                    {% if variants|length > 0 %}
-                          
-                            {% for variant in variants %}
-                            <div class="variant-product well">
-
-                                {% with image=variant.primary_image %}
-                                {% thumbnail image.original "70x70" upscale=False as thumb %}
-                                <div class="image_container">
-                                    <img src="{{ thumb.url }}" alt="{{ variant.get_title }}" data-description="{% if image.caption %}{{ image.caption }}{% endif %}">
-                                </div>
-                                {% endthumbnail %}
-                                {% endwith %}
-
-                                <div>
-                                    <h4>{{ variant.title }}</h4>
-
-                                    {% include "catalogue/partials/variant_stock_record.html" with class="span5" product=variant %}
-                                    
-                                    <div class="variant-form">
-                                        {% if variant.is_available_to_buy %}
-                                        {% basket_form request variant as basket_form %}
-                                        <form action="{% url basket:add %}" method="post" class="form-inline">
-                                            {% csrf_token %}
-                                            {% include "partials/form_fields_inline.html" with form=basket_form %}
-                                            <button type="submit" class="btn btn-primary" value="Add to basket">{% trans "Add to bag" %}</button>
-                                        </form>
-                                        <span itemprop="availability" content="in_stock"></span>
-                                        {% else %}
-                                        <p class="variant-notice">{% trans "You can get an email alert when this product is back in stock." %}</p>
-                                        {% include "catalogue/partials/alerts_form.html" with product=variant %}
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            </div>
-                            {% endfor %}
-
-                    {% endif %}
-                {% endwith %}
-
-            {% endif %}
-    
+            
             {% block product_info %}
             <h3>{% trans "Product Information" %}</h3>
             <table class="table table-striped table-condensed">
@@ -179,6 +100,88 @@
                 {% endif %}
             </section>    
             {% endblock product_review %}
+        </div>
+        {% endblock %}
+
+        <div class="span6">
+            {% block product_main %}
+                <div class="product-highlight">
+                    <h4>{{ product.stockrecord.partner.name }}</h4>
+                    <h2>{{ product.get_title }}</h2>
+                    
+                    {% block product_stock_record %}
+                        {% if not product.is_group %}
+                        <div class="row-fluid">
+                            <h2 class="price_color">{% include "catalogue/partials/stock_record.html" %}</h2>
+                            <p class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free shipping" %}</strong> <br/> {% trans "For all orders" %}</span></p>
+                        </div>
+                        {% endif %}
+                    {% endblock %}
+
+                    {% if not product.is_group %}
+                        {% block product_basket_form %}
+                        <div class="well">
+                            {% include "catalogue/partials/add_to_basket_form.html" %}
+                        </div>
+                        {% endblock %}
+                    {% endif %}
+                    
+                    {% block product_description %}
+                        {% if product.description %}
+                        <p>{{ product.description|safe }}</p>
+                        {% endif %}
+                    {% endblock %}
+                    
+
+                {% endblock %}
+            </div>
+            {% block add_to_basket %}
+            {% if product.is_group %}
+                <h3>{% trans "Please select your varieties" %}</h3>
+
+                {% with variants=product.variants.all %}
+                    {% if variants|length > 0 %}
+
+                            {% for variant in variants %}
+                            <div class="variant-product well">
+
+                                {% with image=variant.primary_image %}
+                                {% thumbnail image.original "70x70" upscale=False as thumb %}
+                                <div class="image_container">
+                                    <img src="{{ thumb.url }}" alt="{{ variant.get_title }}" data-description="{% if image.caption %}{{ image.caption }}{% endif %}">
+                                </div>
+                                {% endthumbnail %}
+                                {% endwith %}
+
+                                <div>
+                                    <h4>{{ variant.title }}</h4>
+
+                                    {% include "catalogue/partials/variant_stock_record.html" with class="span5" product=variant %}
+
+                                    <div class="variant-form">
+                                        {% if variant.is_available_to_buy %}
+                                        {% basket_form request variant as basket_form %}
+                                        <form action="{% url basket:add %}" method="post" class="form-inline">
+                                            {% csrf_token %}
+                                            {% include "partials/form_fields_inline.html" with form=basket_form %}
+                                            <button type="submit" class="btn btn-primary" value="Add to basket">{% trans "Add to bag" %}</button>
+                                        </form>
+                                        <span itemprop="availability" content="in_stock"></span>
+                                        {% else %}
+                                        <p class="variant-notice">{% trans "You can get an email alert when this product is back in stock." %}</p>
+                                        {% include "catalogue/partials/alerts_form.html" with product=variant %}
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                            {% endfor %}
+
+                    {% endif %}
+                {% endwith %}
+
+            {% endif %}
+            {% endblock add_to_basket %}
+
 
         </div><!-- /span6 -->
     </div><!-- /row-fluid -->
