--- a/heatingmasterstore/templates/layout.html
+++ b/heatingmasterstore/templates/layout.html
@@ -21,7 +21,7 @@
                     </div>
                     <div>
                         {% block mini_basket %}<p><i class="icon-cart"></i>{% include "partials/mini_basket.html" %}</p>{% endblock %}
-                        <p><i class="icon-mobile"></i> <span>{% trans "Customer Service" %} <br/> <strong>0800-424-1324</strong></span></p>
+                        <p><i class="icon-mobile"></i> <span>{% trans "Customer Service" %} <br/> <strong>sales@heatingmaster.co.uk</strong></span></p>
                         <p><i class="icon-lock"></i> <span>{% trans "Secure by" %} <br/> <strong>{% trans "VeriSign" %}</strong></span></p>
                     </div>
                  </div>
