--- a/heatingmasterstore/templates/promotions/home.html
+++ b/heatingmasterstore/templates/promotions/home.html
@@ -1,4 +1,20 @@
-{% extends "layout.html" %}
+
+<!DOCTYPE HTML>
+<html lang="en-GB">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0;url=/catalogue/">
+        <script type="text/javascript">
+            window.location.href = "/catalogue/"
+        </script>
+        <title>Heating Master Store</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow the <a href='http://www.heatingmaster.co.uk'>link to Heating Master Store</a>
+    </body>
+</html>
+<!-- {% extends "layout.html" %}
 {% load staticfiles %}
 {% load promotion_tags %}
 {% load i18n %}
@@ -77,5 +93,5 @@
             </div>
         </div>
     </div>
-{% endblock %}
+{% endblock %} -->
                     
