- add install_notes to fix problem such pil not surports jpeg, new git ignore

--- a/heatingmasterstore/templates/customer/emails/commtype_registration_body.html
+++ b/heatingmasterstore/templates/customer/emails/commtype_registration_body.html
@@ -33,7 +33,7 @@
 <td>
 <p >
   <a href="http://www.heatingmaster.co.uk" target="_blank">
-  <img src="http://www.heatingmaster.co.uk/static/oscar/img/ui/sprite.png"  alt="verisign" /></a>
+  <img src="http://www.heatingmaster.co.uk/static/oscar/img/ui/sprite.png"  alt="verisign approved partner" /></a>
   </p>
 <p>Copyright 2013 Heating Master Limited, t/a Heating Master Store</p>
 
