--- a/heatingmasterstore/templates/basket/partials/basket_content.html
+++ b/heatingmasterstore/templates/basket/partials/basket_content.html
@@ -4,7 +4,7 @@
 {% block formactions %}
 <div class="form-actions">
     {% if anon_checkout_allowed or request.user.is_authenticated %}
-        <a href="{% url paypal-redirect %}"><img src="https://www.paypalobjects.com/webstatic/mktg/merchant/images/express-checkout-hero.png" align="right" style="margin-right:7px;"></a>
+        <a href="{% url paypal-redirect %}"><img src="https://www.paypalobjects.com/webstatic/mktg/merchant/images/express-checkout-hero.png" align="right" style="margin-right:7px;width:300px"></a>
     {% endif %}
 {#    <a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">{% trans "Proceed to checkout" %}</a>#}
 </div>
