--- a/heatingmasterstore/templates/flatpages/about.html
+++ b/heatingmasterstore/templates/flatpages/about.html
@@ -20,7 +20,7 @@
                 <p>Registered in England and Wales, company number: 08554455, VAT number:167 8850 57</p>
             </div>
             <div class="span7" id="about_delivery">
-                <h2>Excellent Nextday Delivery Service</h2>
+                <h2>Excellent Next Day Delivery Service</h2>
                 <p>Same day dispatch if orders are placed before 1:00pm.</p>
                 <p>DPD next day service will deliver the goods to you on the next working day.</p>
                 <p>DPD's award-winning <a href='http://www.dpd.co.uk/lp/predict/main/index.html' target='_blank'>Preditct&trade; </a>service provides you with a one hour delivery window so you don't have to wait in all day for your parcels.
@@ -42,14 +42,14 @@
 
         <div class="span4">
             <div class="promotion-block widget-delivery">
-                <h3><i class="icon-earth"></i>{% trans "World wide delivery" %}</h3>
-                <p>{% trans "We ship worldwide from our warehouses in Melbourne, Australia and other locations depending on brand and destination." %}</p>
+                <h3><i class="icon-earth"></i>{% trans "UK wide delivery" %}</h3>
+                <p>{% trans "We ship UK wide from our warehouses in Crewe, CW11." %}</p>
 <!--                 <a href="#" class="btn">{% trans "Find out more" %}</a> -->
             </div>
 
             <div class="promotion-block widget-shipping">
-                <h3 class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free shipping" %}</strong> <br/> {% trans "For all orders" %}</span></h3>
-                <p>{% trans "We offer Free Shipping for all orders." %}</p>
+                <h3 class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free Delivery" %}</strong> <br/> {% trans "For all orders" %}</span></h3>
+                <p>{% trans "We offer Free Delivery for all orders." %}</p>
 <!--                 <a href="#" class="btn">{% trans "Find out more" %}</a> -->
             </div>
         </div>
