--- a/heatingmasterstore/templates/partials/footer.html
+++ b/heatingmasterstore/templates/partials/footer.html
@@ -7,7 +7,7 @@
                 <h3>{% trans "About" %}</h3>
                 <ul>
                     <li><a href="/about/#about_us">{% trans "About Us" %}</a></li>
-                    <li><a href="/about/#about_delivery">{% trans "Nextday Delivery Service" %}</a></li>
+                    <li><a href="/about/#about_delivery">{% trans "Next Day Delivery Service" %}</a></li>
                     <li><a href="/about/#about_packaging">{% trans "Items Packaging" %}</a></li>
                     <li><a href="/about/#about_returns">{% trans "14 Days Return Policy" %}</a></li>
                    <!--  <li><a href="#">{% trans "Terms and Conditions" %}</a></li> -->
