add Meta info in base.html

--- a/heatingmasterstore/templates/base.html
+++ b/heatingmasterstore/templates/base.html
@@ -2,6 +2,18 @@
 {% load i18n compress %}
 {% load staticfiles %}
 
+
+{% block description %}Welcome to Heating Master Store, HeatingMaster is specialised in under floor heating, underfloor heating products, insulation xps boards, tile backer boards, electric heating mat kit,water underfloor heating system.{% endblock %}
+{% block keywords %}Heating Master, Underfloor heating, Under floor heating,Heating Master Store, insulation boards, tile backer boards, electric heating mat, heating mat, heating kit, electric heating kit, heating mat, underfloor, water underfloor heating, underfloor heating pipe, cheap, low price, free delivery, under floor, special offer {% endblock %}" 
+{% block viewport %}width=device-width"{% endblock %}
+
+
+{% block favicon %}
+   <link rel="shortcut icon" href="{% static "oscar/favicon.ico" %}" />
+{% endblock %}
+
+
+
 {% block mainstyles %}
     {% block styles %}
         {% compress css %}
