--- a/heatingmasterstore/templates/catalogue/detail.html
+++ b/heatingmasterstore/templates/catalogue/detail.html
@@ -40,10 +40,12 @@
                     <th>{% trans "Product class" %}</th><td>{{ product.get_product_class.name }}</td>
                 </tr>
                 {% if product.stockrecord %}
+<!--
                 <tr>
                     <th>{% trans "Price (excl. tax)" %}</th><td>{{ product.stockrecord.price_incl_tax|currency }}</td>
                 </tr>
                 <tr>
+-->
                     <th>{% trans "Price (incl. tax)" %}</th><td>{{ product.stockrecord.price_excl_tax|currency }}</td>
                 </tr>
                 <tr>
@@ -107,13 +109,13 @@
             {% block product_main %}
                 <div class="product-highlight">
                     <h4>{{ product.stockrecord.partner.name }}</h4>
-                    <h2>{{ product.get_title }}</h2>
+                    <h3>{{ product.get_title }}</h3>
                     
                     {% block product_stock_record %}
                         {% if not product.is_group %}
                         <div class="row-fluid">
                             <h2 class="price_color">{% include "catalogue/partials/stock_record.html" %}</h2>
-                            <p class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free shipping" %}</strong> <br/> {% trans "For all orders" %}</span></p>
+                            <p class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free delivery" %}</strong> <br/> {% trans "For all orders" %}</span></p>
                         </div>
                         {% endif %}
                     {% endblock %}
