Change free delivery to free UK mainland delivery

--- a/heatingmasterstore/templates/promotions/home.html
+++ b/heatingmasterstore/templates/promotions/home.html
@@ -87,8 +87,8 @@
             </div>
 
             <div class="promotion-block widget-shipping">
-                <h3 class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free shipping" %}</strong> <br/> {% trans "For all orders" %}</span></h3>
-                <p>{% trans "We offer Free Shipping for all orders." %}</p>
+                <h3 class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free UK delivery" %}</strong> <br/> {% trans "For all UK mainland orders" %}</span></h3>
+                <p>{% trans "We offer Free Delivery for all UK mainland orders." %}</p>
                 <a href="#" class="btn">{% trans "Find out more" %}</a>
             </div>
         </div>
