--- a/heatingmasterstore/templates/catalogue/detail.html
+++ b/heatingmasterstore/templates/catalogue/detail.html
@@ -115,7 +115,7 @@
                         {% if not product.is_group %}
                         <div class="row-fluid">
                             <h2 class="price_color">{% include "catalogue/partials/stock_record.html" %}</h2>
-                            <p class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free delivery" %}</strong> <br/> {% trans "For all orders" %}</span></p>
+                            <p class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free delivery" %}</strong> <br/> {% trans "For all UK mainland orders" %}</span></p>
                         </div>
                         {% endif %}
                     {% endblock %}
