--- a/heatingmasterstore/templates/flatpages/about.html
+++ b/heatingmasterstore/templates/flatpages/about.html
@@ -48,8 +48,8 @@
             </div>
 
             <div class="promotion-block widget-shipping">
-                <h3 class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free Delivery" %}</strong> <br/> {% trans "For all orders" %}</span></h3>
-                <p>{% trans "We offer Free Delivery for all orders." %}</p>
+                <h3 class="free-delivery"><i class="icon-truck"></i> <span><strong>{% trans "Free Delivery" %}</strong> <br/> {% trans "For all UK mainland orders" %}</span></h3>
+                <p>{% trans "We offer Free Delivery for all UK mainland orders." %}</p>
 <!--                 <a href="#" class="btn">{% trans "Find out more" %}</a> -->
             </div>
         </div>
